[package]
name = "particulate"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d", "MouseEvent", "console", "Element", "DomRect"] }
console_error_panic_hook = "0.1"
js-sys = "0.3"

[profile.release]
lto = true
